<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/team1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="16dp"
                    android:layout_marginTop="16dp"
                    android:fontFamily="sans-serif-medium"
                    android:padding="4dp"
                    android:text="@string/FirstTeam"
                    android:textColor="@color/edit_text_text_color"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/team_a_score"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="24dp"
                    android:fontFamily="sans-serif-light"
                    android:gravity="center"
                    android:padding="4dp"
                    android:text="0"
                    android:textColor="@color/white"
                    android:textSize="56sp" />

                <Button
                    android:id="@+id/buton3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:onClick="buton3"
                    android:text="@string/threepts">

                </Button>

                <Button
                    android:id="@+id/buton2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:onClick="buton2"
                    android:text="@string/twopts" />

                <Button
                    android:id="@+id/buton1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:onClick="buton1"
                    android:text="@string/freethrow" />


            </LinearLayout>

            <View

                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@android:color/darker_gray">

            </View>

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/team2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="16dp"
                    android:layout_marginTop="16dp"
                    android:fontFamily="sans-serif-medium"
                    android:padding="4dp"
                    android:text="@string/SecondTeam"
                    android:textColor="@color/edit_text_text_color"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/team_b_score"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="24dp"
                    android:fontFamily="sans-serif-light"
                    android:gravity="center"
                    android:padding="4dp"
                    android:text="0"
                    android:textColor="@color/white"
                    android:textSize="56sp" />

                <Button
                    android:id="@+id/buton3b"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:onClick="buton3b"
                    android:text="@string/threepts">

                </Button>

                <Button
                    android:id="@+id/buton2b"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:onClick="buton2b"
                    android:text="@string/twopts" />

                <Button
                    android:id="@+id/buton1b"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:onClick="buton1b"
                    android:text="@string/freethrow" />

            </LinearLayout>

        </LinearLayout>

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:onClick="ShowSeconds"
                android:text="@string/TimerStart"
                android:textSize="20sp" />

            <Button
                android:id="@+id/undoTeam1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:onClick="undoTeam1"
                android:text="@string/Undo" />

            <Button
                android:id="@+id/undoTeam2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:onClick="undoTeam2"
                android:text="@string/Undo" />

            <LinearLayout
                android:id="@+id/sep"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="45dp"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/minutes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/Minutes"
                    android:inputType="number"
                    android:maxLines="1"
                    android:textColor="@color/colorPrimary" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=":"
                    android:textColor="@color/colorPrimary" />

                <EditText
                    android:id="@+id/seconds"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="Seconds"
                    android:inputType="number"
                    android:maxLines="1"
                    android:textColor="@color/edit_text_text_color" />
            </LinearLayout>


            <Button
                android:id="@+id/reset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/sep"
                android:layout_centerHorizontal="true"
                android:onClick="reset"
                android:text="@string/Reset" />

            <TextView
                android:id="@+id/secundeRem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/reset"
                android:layout_centerHorizontal="true"
                android:text="0"
                android:textSize="25sp" />

        </RelativeLayout>
    </LinearLayout>
</ScrollView>